# xemu-android

./: README.md  config_spec.yml
.cursor/plans/: tiered_recompilation_with_cache.plan.md  xbox_tcg_arm64_optimizations_09397fb0.plan.md
accel/tcg/: cpu-exec.c  tb-cache-hints.c  tb-cache-hints.h  tb-maint.c  translate-all.c  translator.c
android/: gradle.properties  gradlew
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  samplerate_stub.c  vmstate_if_android.c  xemu_android.cpp  xemu_settings_android.cc
android/app/src/main/java/com/izzy2lost/x1box/: ControllerInputBridge.kt  FrontendLaunchHelper.kt  GameLibraryActivity.kt  GpuDriverHelper.kt  LauncherActivity.kt  MainActivity.kt  OnScreenController.kt  SettingsActivity.kt
android/app/src/main/res/layout/: activity_game_library.xml  activity_settings.xml
android/app/src/main/res/values/: strings.xml
block/: file-posix.c
hw/xbox/mcpx/apu/: apu.c
hw/xbox/mcpx/apu/dsp/: dsp_cpu.c
hw/xbox/mcpx/apu/vp/: vp.c  vp.h
hw/xbox/nv2a/: nv2a.c  nv2a_int.h  pfifo.c  pramdac.c
hw/xbox/nv2a/pgraph/glsl/: geom.c
hw/xbox/nv2a/pgraph/vk/: buffer.c  command.c  debug.h  display.c  draw.c  glsl.c  image.c  instance.c  renderer.c  renderer.h  reports.c  shaders.c  surface-compute.c  surface.c  texture.c
include/: xemu-config.h
include/exec/: translation-block.h  translator.h
include/qemu/: timer.h
include/tcg/: tcg.h
tcg/: optimize.c  tcg-internal.h  tcg.c  tier1-opt.c
ui/: xemu.c
ui/xui/: main-menu.cc
util/: qemu-timer.c
